derive_builder/tests/compile-fail/builder_field_custom.stderr
error: #[builder(default)] and #[builder(field(build="..."))] cannot be used together
 --> tests/compile-fail/builder_field_custom.rs:9:9
  |
9 |         field(build = "self.ipsum.map(|v| v + 42).unwrap_or(100)")
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: #[builder(default)] and #[builder(field(ty="..."))] cannot be used together
  --> tests/compile-fail/builder_field_custom.rs:14:30
   |
14 |     #[builder(default = "2", field(ty = "usize"))]
   |                              ^^^^^^^^^^^^^^^^^^^

error: #[builder(default)] and #[builder(field(build="..."))] cannot be used together
  --> tests/compile-fail/builder_field_custom.rs:18:30
   |
18 |     #[builder(default = "3", field(ty = "usize", build = "self.ipsum + 42"))]
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: #[builder(default)] and #[builder(field(ty="..."))] cannot be used together
  --> tests/compile-fail/builder_field_custom.rs:18:30
   |
18 |     #[builder(default = "3", field(ty = "usize", build = "self.ipsum + 42"))]
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
